--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <textarea autofocus ></textarea>
+    <button id="saveButton"> save </button>
+    <textarea autofocus id="text"></textarea>
+
+    <script type="module" src="renderer.js"></script>
   </body>
 </html>
