--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <button id="saveButton"> save </button>
+    <button id="openFileButton"> open</button>
     <textarea autofocus id="text"></textarea>
 
     <script type="module" src="renderer.js"></script>
